@@ -4,6 +4,8 @@ rpi-imager (1.9.7) unstable; urgency=medium
     - Fixup SSH key duplication in written OS
     - Fixup 'Beep', 'Eject', 'Telemetry' option persistence
   * windows: Autogenerate manifest version information from the build
+  * windows, macos, linux: Add PlatformQuirks module to deal with host
+      hardware quirks. Today, just used on Windows for nVidia lockups.
 
  -- Tom Dewey <tom.dewey@raspberrypi.com>  Thu, 31 Jul 2025 17:00:00 +0100
 
